Photo size 1000px.

--- a/ui/static/index.html
+++ b/ui/static/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta name="viewport" content="width=device-width; initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog</title>
 
     <link href="/static/style/style.css" rel="stylesheet">
@@ -42,7 +42,7 @@
         </div>
     </div>
 
-    <div id="box"><img src="#bimg" id="bimg" onclick="event.stopPropagation();" alt="full image"></div>
+    <div id="box"><img src="#bimg" id="bimg" alt="full image"></div>
 </body>
 
 </html>
