--- a/ui/static/pages/user.html
+++ b/ui/static/pages/user.html
@@ -5,7 +5,7 @@
 <div id="profile" class="material-box">
     <div id="profile-left">
         <img src="" id="profile-avatar" class="rounded" alt="profile-avatar"
-            onclick="lightbox(getUserAvatarLink(currentUser.avatar, 'f'));">
+            onclick="lightbox(getUserAvatarLink(currentUser.avatar, 'xl'));">
 
         <div id="owner-profile-form" class="owner">
             <a href="javascript:void(0);" id="owner-profile-form_edit-page" class="elink">Edit page</a><br>
